# machine-learning-introduction

./: .gitignore  README.md  loader.py  main1.py  main2.py  model.py  models_settings.py  pipeline.py  pyproject.toml  trab1.py  trab2.py
notebooks/: trabalho1.ipynb
scripts/: run_inference.py  run_optimization.py
src/machine_learning_introduction/: __init__.py  config.py  models_settings.py  pipeline.py  preprocessing.py
src/machine_learning_introduction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
