[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-learning-introduction"
version = "0.1.0"
description = "A comprehensive ML pipeline for credit scoring and regression."
authors = [{name = "Heraldo", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "click"
]

[project.scripts]
ml-optimize = "scripts.run_optimization:main"
ml-predict = "scripts.run_inference:main"

[tool.setuptools.packages.find]
where = ["src"]
